fix: toggle label spacing, radios overflow and tooltip

--- a/src/components/RadioGroup/_radioGroup.scss
+++ b/src/components/RadioGroup/_radioGroup.scss
@@ -19,10 +19,13 @@
 }
 
 .#{$prefix}--radio-button__label {
+  width: var(--height);
+
   > span + span {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: calc(100% - 1.875rem);
   }
 }
 
